<?xml version="1.0"?>
<package>
  <name>ci_example_python</name>
  <version>1.0.0</version>
  <description>collection of examples of python demos and unit tests, in implementations suitable for continuous integration</description>
  <author email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</author>
  <maintainer email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
